SalesForce/Assignment_13/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactIDs__c</fullName>
        <label>ContactIDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit_Card_Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecutionLogic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ExecutionLogic</label>
        <referenceTo>DetailAccount__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_of_5__c</fullName>
        <label>Multiple of 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential_Value</label>
        <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <label>ShippingPostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_Postal_Code_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(BillingCountry = &quot;USA&quot;, BillingCountry = &quot;US&quot;),
NOT(REGEX(BillingPostalCode, &quot;\\d{5}(-\\d{4})?&quot;))
)</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>Enter value in format 99999 or 99999-9999 for country USA/US</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_card_format</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX(  Credit_Card_Number__c  , &quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;))</errorConditionFormula>
        <errorMessage>Enter value in format 9999-9999-9999-9999 or 9999999999999999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_should_be_weekday</fullName>
        <active>true</active>
        <errorConditionFormula>CASE(MOD(  Date__c - DATE(1900, 1, 7), 7), 0, 0, 6, 0, 1) = 0</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Enter a weekday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mix_Pct</fullName>
        <active>true</active>
        <description>Percentage value should be between 0 - 100%</description>
        <errorConditionFormula>OR( Mix_Pct__c &lt; 0.00, Mix_Pct__c &gt; 1.00)</errorConditionFormula>
        <errorDisplayField>Mix_Pct__c</errorDisplayField>
        <errorMessage>Enter value between 0 - 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_of_five</fullName>
        <active>true</active>
        <errorConditionFormula>MOD( Multiple_of_5__c ,5) != 0</errorConditionFormula>
        <errorDisplayField>Multiple_of_5__c</errorDisplayField>
        <errorMessage>Enter a number divisible by 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Numeric_Account_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !ISBLANK( AccountNumber ),  !ISNUMBER( AccountNumber ) )</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Enter a number</errorMessage>
    </validationRules>
</CustomObject>